# qr_code

./: CMakeLists.txt  README.md  qr_rec.cpp
inc/: detect_qrcode.h
src/: detect_qrcode.cpp  main.cpp
